# ProxyDLPAgent

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  dns.c  dns.h  dnslog.c  dnslog.h  main.c  proxydlp.c  proxydlp.h
.cargo/: config.toml
include/: config.h  dns.h  heartbeat.h  https_client.h  monitor.h  telemetry.h  tracelog.h
src/: Makefile  config.c  config.rs  dns.c  heartbeat.c  heartbeat.rs  https_client.c  https_client.rs  main.c  main.rs  monitor.c  proxy_config.rs  proxydlp.c  telemetry.c
src_legacy/: Makefile  main.c  proxydlp.c
